# Serialization

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/source/: JsonSerializer.cpp  JsonSerializer.h  main.cpp
source/: ObjectDesc.h  ObjectFactory.cpp  ObjectFactory.h  Property.cpp  Property.h  Serializable.cpp  Serializable.h  Serializer.cpp  Serializer.h  TempContainer.h  TypeInfo.cpp  TypeInfo.h  TypeTraits.h  main.cpp
